--- a/assets/css/post.css
+++ b/assets/css/post.css
@@ -1,6 +1,15 @@
-#post .title {
+#post .header {
   font-family: "IBM Plex Serif";
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 3rem auto;
+}
+
+#post .title {
+  font-size: 3rem;
   font-weight: 500;
+  margin: 0px;
 }
 
 /* Generic block (notes, quotes, warning, tips and etctera) */
@@ -19,11 +28,6 @@
 #post .codeblocks {
   padding: 0px auto;
   font-size: 16px;
-}
-
-#post .title {
-  font-size: 250%;
-  margin-bottom: 10px;
 }
 
 #post .created-at {
