--- a/partials/resume.ejs
+++ b/partials/resume.ejs
@@ -1,6 +1,6 @@
 <%- include(metaconfig.paths.layouts.start); %>
 <main id="resume">
-  <div class="section">
+  <div class="section about-me">
     <p id="about-me" class="section-title">
       <a href="#about-me">#</a> About me
     </p>
@@ -16,12 +16,7 @@
     </p>
     <p>
       I also love compilers. My main personal project is a compiler for my own
-      programming language called <i>Telia</i>. This compiler is being written
-      in the
-      <a class="link" href="https://www.rust-lang.org/" target="_blank"
-        >Rust programming language</a
-      >
-      with hand-written lexical, syntactic, and semantic algorithms.
+      programming language called <i>Telia</i>.
     </p>
     <p>
       During my spare time, I have made sporadic contributions to open-source
@@ -73,7 +68,7 @@
   </div>
 
   <div class="section">
-    <p id="work" class="section-title"><a href="#work">#</a> Work</p>
+    <p id="work" class="section-title"><a href="#work">#</a> Work experience</p>
     <div class="work-item">
       <div class="work-location">
         <p>Otimize Tech</p>
