--- a/partials/projects.ejs
+++ b/partials/projects.ejs
@@ -9,8 +9,17 @@
       licensed under the MIT license. Use at your own risk.
     </p>
 
-    <!-- TODO: could I automate this?? -->
     <ul class="list">
+      <li>
+        Telia is a statically and strongly typed programming language inspired
+        on modern languages, such as Python, Go and Rust. It is compiled to
+        native and efficient machine code using <a class="link"
+        href="https://llvm.org/">LLVM</a>. Telia is still pretty imature and
+        not ready to use.
+      </li>
+
+      <br />
+
       <li>
         <a
           class="link"
