--- a/public/assets/css/post.css
+++ b/public/assets/css/post.css
@@ -1,6 +1,15 @@
-#post .title {
+#post .header {
   font-family: "IBM Plex Serif";
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 3rem auto;
+}
+
+#post .title {
+  font-size: 3rem;
   font-weight: 500;
+  margin: 0px;
 }
 
 /* Generic block (notes, quotes, warning, tips and etctera) */
@@ -19,4 +28,8 @@
 #post .codeblocks {
   padding: 0px auto;
   font-size: 16px;
+}
+
+#post .created-at {
+  margin: 0px auto;
 }
