--- a/layouts/footer.ejs
+++ b/layouts/footer.ejs
@@ -1,6 +1,11 @@
-<hr class="line" />
+<hr class="line footer-line" />
 <div id="footer">
-  <div class="me">
-    <img src="<%= profile.picture %>" alt="profile-pic" />
+  <div class="socials">
+    <a href="https://www.linkedin.com/in/hicaromiguel/" target="_blank">
+      <img class="icon" src="assets/icons/linkedin.svg" alt="linkedin">
+    </a>
+    <a href="mailto:hdanrlley1@gmail.com" target="_blank">
+      <img class="icon" src="assets/icons/gmail.svg" alt="e-mail">
+    </a>
   </div>
 </div>
