--- a/public/assets/css/footer.css
+++ b/public/assets/css/footer.css
@@ -1,12 +1,15 @@
-/* My picture + Name */
-#footer {
-  margin-top: 1rem;
+/* Socials */
+#footer .socials {
   display: flex;
   justify-content: center;
+  column-gap: 1rem;
 }
 
-#footer .me img {
-  width: 55px;
-  height: 55px;
-  border-radius: 50%;
+#footer .socials .icon {
+  width: 35px;
+  height: 35px;
+}
+
+.footer-line {
+  margin: 2rem auto;
 }
