--- a/assets/css/topbar.css
+++ b/assets/css/topbar.css
@@ -47,3 +47,18 @@
 .topbar-line {
   margin-bottom: 2rem;
 }
+
+@media screen and (max-width: 900px) {
+  #topbar {
+    flex-direction: column;
+  }
+
+  #topbar .me, #topbar .items {
+    justify-content: center;
+    width: 100%;
+  }
+
+  #topbar .items {
+    padding-left: 0px;
+  }
+}
