--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -22,3 +22,25 @@
   margin-top: 0;
   font-size: 18px;
 }
+
+@media screen and (max-width: 700px) {
+  #blog .post .title {
+    font-size: 1.5rem;
+  }
+
+  #blog .date,
+  #blog .tags > p {
+    font-size: 17px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  #blog .post .title {
+    font-size: 1.3rem;
+  }
+
+  #blog .date,
+  #blog .tags > p {
+    font-size: 16px;
+  }
+}
