feat(topbar): minor changes on topbar font-sizes

--- a/assets/css/topbar.css
+++ b/assets/css/topbar.css
@@ -53,7 +53,16 @@
     flex-direction: column;
   }
 
-  #topbar .me, #topbar .items {
+  #topbar .me .name {
+    font-size: 1.6rem;
+  }
+
+  #topbar .items {
+    font-size: 16px;
+  }
+
+  #topbar .me,
+  #topbar .items {
     justify-content: center;
     width: 100%;
   }
