--- a/assets/css/post.css
+++ b/assets/css/post.css
@@ -9,6 +9,7 @@
 #post .title {
   font-size: 3rem;
   font-weight: 500;
+  text-align: center;
   margin: 0px;
 }
 
@@ -31,5 +32,26 @@
 }
 
 #post .created-at {
+  padding-top: 10px;
   margin: 0px auto;
+}
+
+@media screen and (max-width: 700px) {
+  #post .title {
+    font-size: 2.5rem;
+  }
+
+  #post .codeblocks {
+    font-size: 14px;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  #post .title {
+    font-size: 2.2rem;
+  }
+
+  #post .codeblocks {
+    font-size: 13px;
+  }
 }
