--- a/public/assets/css/post.css
+++ b/public/assets/css/post.css
@@ -24,6 +24,10 @@
   font-style: italic;
 }
 
+#post .image > img {
+  width: 100%;
+}
+
 /* Generic block (notes, quotes, warning, tips and etctera) */
 #post .block {
   padding-left: 15px;
